fix: list item title alignment

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -352,7 +352,7 @@ select {
   font-size: 1rem;
   margin: 0;
   flex: 1 1 auto;
-  padding: 0.5rem 0;
+  padding: 0.65rem 0;
 }
 
 .entity-item .title {
